--- a/HullBreach.csproj
+++ b/HullBreach.csproj
@@ -31,30 +31,23 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Assembly-CSharp">
-      <HintPath>..\KSP\1.3.1\Assembly-CSharp.dll</HintPath>
-      <Private>False</Private>
+      <HintPath>..\_LocalDev\KSPRefs\Assembly-CSharp.dll</HintPath>
     </Reference>
     <Reference Include="Assembly-CSharp-firstpass">
-      <HintPath>..\KSP\1.3.1\Assembly-CSharp-firstpass.dll</HintPath>
-      <Private>False</Private>
+      <HintPath>..\_LocalDev\KSPRefs\Assembly-CSharp-firstpass.dll</HintPath>
     </Reference>
-    <Reference Include="BDArmory.Core, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\BDArmory\BDArmory.Core\obj\Debug\BDArmory.Core.dll</HintPath>
-      <Private>False</Private>
+    <Reference Include="BDArmory.Core">
+      <HintPath>F:\KSP 1.6.0 Testing\GameData\BDArmory\Plugins\BDArmory.Core.dll</HintPath>
     </Reference>
     <Reference Include="KSPAssets">
-      <HintPath>..\KSP\1.3.1\KSPAssets.dll</HintPath>
-      <Private>False</Private>
+      <HintPath>..\_LocalDev\KSPRefs\KSPAssets.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="UnityEngine">
-      <HintPath>..\KSP\1.3.1\UnityEngine.dll</HintPath>
-      <Private>False</Private>
+      <HintPath>..\_LocalDev\KSPRefs\UnityEngine.dll</HintPath>
     </Reference>
     <Reference Include="UnityEngine.UI">
-      <HintPath>..\KSP\1.3.1\UnityEngine.UI.dll</HintPath>
-      <Private>False</Private>
+      <HintPath>..\_LocalDev\KSPRefs\UnityEngine.UI.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
