--- a/Distribution/GameData/HullBreach/settings.cfg
+++ b/Distribution/GameData/HullBreach/settings.cfg
@@ -1,10 +1,12 @@
 HullBreachSettings
 {
 	CrushDepth = 20
-	flowRate = 0.5
-	critFlowRate = 0.90000000000000002
-	breachTemp = 0.59999999999999998
-	critBreachTemp = 0.90000000000000002
+	MinorFlooding = .3
+	SeriousFlooding = .7
+	FatalFlooding = 1
+	MinorDmg = 0.90
+	SeriousDmg = 0.6
+	FatalDmg = 0.25
 	ecDrain = True
 	isHullBreachEnabled = False
 }
