--- a/HullBreach.csproj
+++ b/HullBreach.csproj
@@ -31,29 +31,34 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Assembly-CSharp">
-      <HintPath>..\_LocalDev\KSPRefs\Assembly-CSharp.dll</HintPath>
+      <HintPath>..\KSP\1.3.1\Assembly-CSharp.dll</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="Assembly-CSharp-firstpass">
-      <HintPath>..\_LocalDev\KSPRefs\Assembly-CSharp-firstpass.dll</HintPath>
-    </Reference>
-    <Reference Include="BDArmory.Core">
-      <HintPath>F:\KSP 1.6.0 Testing\GameData\BDArmory\Plugins\BDArmory.Core.dll</HintPath>
+      <HintPath>..\KSP\1.3.1\Assembly-CSharp-firstpass.dll</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="KSPAssets">
-      <HintPath>..\_LocalDev\KSPRefs\KSPAssets.dll</HintPath>
+      <HintPath>..\KSP\1.3.1\KSPAssets.dll</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="System" />
     <Reference Include="UnityEngine">
-      <HintPath>..\_LocalDev\KSPRefs\UnityEngine.dll</HintPath>
+      <HintPath>..\KSP\1.3.1\UnityEngine.dll</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="UnityEngine.UI">
-      <HintPath>..\_LocalDev\KSPRefs\UnityEngine.UI.dll</HintPath>
+      <HintPath>..\KSP\1.3.1\UnityEngine.UI.dll</HintPath>
+      <Private>False</Private>
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="HullBreachConfig.cs" />
+    <Compile Include="BDArmoryExtension.cs" />
+    <Compile Include="HullBreachCategory.cs" />
     <Compile Include="Gui.cs" />
+    <Compile Include="HullBreachConfig.cs" />
     <Compile Include="HullBreachToolBar.cs" />
+    <Compile Include="ModuleHBIgnore.cs" />
     <Compile Include="ModuleHullBreach.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -90,7 +95,7 @@ set /p DIST_DIR=&lt;"$(ProjectDir)LocalDev\dist_dir.txt"
 
 @echo distributing $(Targetname) files...
 copy /Y "$(TargetPath)" "$(ProjectDir)Distribution\GameData\%25ModName%25\Plugins\"
-copy /Y "$(TargetPath)" "C:\Users\dlane\Dropbox\Kerbal\ModDevelopment\Release"
+copy /Y "$(TargetPath)" "E:\Mod_Compiling\Releases"
 
 if $(ConfigurationName) == Debug (
 @echo building $(Targetname).dll.mdb file...
